updated schedule, post descriptions and updated blog post-entry

--- a/_posts/rpg/2023-01-12-hyperion.md
+++ b/_posts/rpg/2023-01-12-hyperion.md
@@ -9,4 +9,10 @@ image: hero.jpg
 category: rpg
 ---
 
-Description coming soon
+“In hushed whispers down darkened alleyways, from drunken lips in dingy taverns, on torn flyers forgotten or discarded … you have all heard the same word: Hyperion. Maybe it was a question, a suggestion, or a demand but however it called to you, you have answered in turn. From across the planes you all approach the looming walls with the same goal in mind- to be the hero who conquers Hyperion.”
+
+
+Hyperion is a high-energy arena where the hero's must survive waves of deadly and fearsome monsters from across all the planes in existence. Will they be strong enough to endure and be crowned victorious or will they be slain like so many before them…
+
+
+Characters of Level 10; sheets provided if needed!
