--- a/_posts/rpg/2023-01-12-hyperion.md
+++ b/_posts/rpg/2023-01-12-hyperion.md
@@ -7,6 +7,7 @@ players: 4-5
 exp_level: Any
 image: hero.jpg
 category: rpg
+tags: Action, Dungeon-crawler, Survival, Arena, Roleplaying, Violence, Mild gore mentions
 ---
 
 “In hushed whispers down darkened alleyways, from drunken lips in dingy taverns, on torn flyers forgotten or discarded … you have all heard the same word: Hyperion. Maybe it was a question, a suggestion, or a demand but however it called to you, you have answered in turn. From across the planes you all approach the looming walls with the same goal in mind- to be the hero who conquers Hyperion.”
