--- a/_posts/larps/2024-01-20-7-rivers.md
+++ b/_posts/larps/2024-01-20-7-rivers.md
@@ -7,7 +7,7 @@ author: Cael O'Toole
 exp_level: 
 category: larps
 image: hero.jpg
-tags: Potential violence, mild horror elements, magical capitalism
+tags:
 
 ---
 
