fix larps again

--- a/_posts/larps/2024-01-20-7-rivers.md
+++ b/_posts/larps/2024-01-20-7-rivers.md
@@ -2,7 +2,7 @@
 layout: larp
 title: "7 Rivers: Children of the Khan"
 system: 
-author: Cael O'Toole
+author: 
 # players: 26
 exp_level: 
 category: larps
